Fix ellipsis and line-break in chat

--- a/packages/venia-concept/@orienteed/csr/src/components/Chat/chat.module.css
+++ b/packages/venia-concept/@orienteed/csr/src/components/Chat/chat.module.css
@@ -104,6 +104,7 @@
     line-height: 24px;
     padding: 15px;
     white-space: pre-line;
+    line-break: anywhere;
 }
 
 .chatBodyCommentAgentText {
@@ -113,6 +114,7 @@
     line-height: 24px;
     padding: 15px;
     white-space: pre-line;
+    line-break: anywhere;
 }
 
 .commentMetadataContainer {
