--- a/packages/venia-concept/@orienteed/csr/src/components/TicketItem/ticketItem.module.css
+++ b/packages/venia-concept/@orienteed/csr/src/components/TicketItem/ticketItem.module.css
@@ -151,6 +151,7 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    line-break: anywhere;
 }
 
 .fieldSummaryGrid {
